[gd_scene load_steps=8 format=3 uid="uid://d4k25qtaw1fkg"]

[ext_resource type="Script" path="res://scripts/Global.gd" id="1_47623"]
[ext_resource type="AudioStream" uid="uid://cl7jjffxviikg" path="res://assets/Terraria Music - Day.mp3" id="2_mmxk5"]
[ext_resource type="AudioStream" uid="uid://df4h5wtt2rse2" path="res://assets/[Official] Celeste Original Soundtrack - 03 - Resurrections.mp3" id="3_wtfj7"]
[ext_resource type="AudioStream" uid="uid://bflxxkd3nd1mk" path="res://assets/[Official] Celeste Original Soundtrack - 11 - Quiet and Falling.mp3" id="4_ipoom"]
[ext_resource type="AudioStream" uid="uid://b2ee0u6g2dm57" path="res://assets/Terraria Calamity Mod Music - 1NF3S@!0N - Theme of Crabulon.mp3" id="5_4cfy8"]
[ext_resource type="AudioStream" uid="uid://70uw4qg7iqmw" path="res://assets/Pokémon RubySapphireEmerald - Wild Pokémon Battle Theme [Enhanced].mp3" id="6_7mf8w"]
[ext_resource type="AudioStream" uid="uid://clic8w5bj5lwl" path="res://assets/Terraria Music - Alternate Day.mp3" id="7_jay5o"]

[node name="Global" type="Node"]
script = ExtResource("1_47623")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Music1" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("2_mmxk5")
volume_db = -15.0

[node name="Music2" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("3_wtfj7")
volume_db = -15.0

[node name="Music3" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("4_ipoom")
volume_db = -15.0

[node name="Music4" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("5_4cfy8")
volume_db = -15.0

[node name="Music5" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("6_7mf8w")
volume_db = -15.0

[node name="Music6" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("7_jay5o")
volume_db = -15.0
